rsfg/tests/scripts/error/assign-mismatched-type.sfg
fn main()
	var x = 5
	x = "five"

